# py3-folder-path

./: README.md  environment.yml  main.py  pyproject.toml  pyvenv.cfg
a/b/: __init__.py
tests/: __init__.py  alias.py  checkEnv.sh  path_investigation.py  raw.py
