[tool.poetry]
name = "py3-folder-path"
version = "0.1.0"
description = ""
authors = ["jasonchan <jchan48@gmail.com>"]
readme = "README.md"
packages = [{include = "py3_folder_path"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
